--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Kick</title>
 </head>
 <body>
-    <div><b>HELLO</b></div>
-    <span>Look at me</span>
+    <header><b>Hello</b></header>
+    <main>Look at me</main>
     
 
     <img src="https://preview.redd.it/i-tried-drawing-this-v0-4i4fzmxm2qwd1.jpg?width=523&format=pjpg&auto=webp&s=ccf534ed5026b724238c60b3f57f4207205dade9"
@@ -15,5 +16,5 @@
     width="300"
     height="500"
 </body>
-<div><b>GOODBYE</b></div>
+<footer><b>Goodbye</b></footer>
 </html>
