--- a/task2.html
+++ b/task2.html
@@ -6,23 +6,44 @@
   <title>Document</title>
 </head>
 <body>
-  <p><b>
+  <style>
+  .Minimalist {
+    font-size: 25px;
+    font-family: monospace;
+    margin-top: 200px;
+    margin-bottom: 50px;
+  }
+  .hi-there {
+    box-sizing: content-box;
+    font-family: ariel;
+    text-align: center;
+    line-height: 100px;
+    color: rgb(208, 21, 21);
+  }
+  </style>
+
+  <p class="Minimalist"><b>
    Minimalist Writer’s Website
   </b></p>
 
   <main>
-    <img src="/bulb.jpeg"
+    <img src="/img/bulb.jpeg"
     alt="bulb"
     width="13"
     height="12"
 
-    <p>
+    <p class="hi-there">
       Hi there, welcome to your homepage! 
-      You can edit everything on this page including the photos, 
-      page titles, icons (emojis), hyperlinks, etc. 
-      Read my tutorial if you need help with 🐧 
-      Setting Up Your Notion Website (Desktop, iPad & Mobile). 
+      You can edit everything on this page including the photos, page titles, icons (emojis), hyperlinks, etc. 
+      Read my tutorial if you need help with 🐧 Setting Up Your Notion Website (Desktop, iPad & Mobile). 
       I’ve also added a bunch of tips on each webpage.
+    </p>
+    <p class="Contact-form">
+      📄 The Contact Form on this template is just a sample—you will have to create your own. 
+      A tutorial is included in 🐧 Setting Up Your Notion Website (Desktop, iPad & Mobile).
+    </p>
+    <p class="Delete">
+      🗑️ You can delete this box whenever you’re ready to publish your website.
     </p>
   </main>
 </body>
