--- a/task2.html
+++ b/task2.html
@@ -6,45 +6,47 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="icon-star">
+  <img src="/img/icons8-dizzy-96.png" alt="star">
+  </div>
   <style>
-  .Minimalist {
-    font-size: 25px;
-    font-family: monospace;
-    margin-top: 200px;
+    .icon-star {
+      margin-top: 300px;
+      margin-bottom: 10px;
+      margin-left: 400px;
+    }
+    .Minimalist {
+    font-size: 35px;
+    font-family: georgia, serif;
     margin-bottom: 50px;
-  }
-  .hi-there {
-    box-sizing: content-box;
-    font-family: ariel;
-    text-align: center;
-    line-height: 100px;
-    color: rgb(208, 21, 21);
-  }
+    margin-left: 400px;
+    margin-right: 400px;
+    margin-bottom: 10px;
+
+    }
+    .info-box {
+    background-color: #f8f4f4;
+    padding: 15px;
+    border-radius: 8px;       
+    border: 1px solid #ddd;     
+    font-family: Arial, sans-serif;
+    color: #333;
+    margin-left: 400px;
+    margin-right: 400px;
+    line-height: 1.5
+     }
   </style>
+   <p class="Minimalist"><b>
+    Minimalist Writer’s Website
+   </b>
+   </p>
 
-  <p class="Minimalist"><b>
-   Minimalist Writer’s Website
-  </b></p>
-
-  <main>
-    <img src="/img/bulb.jpeg"
-    alt="bulb"
-    width="13"
-    height="12"
-
-    <p class="hi-there">
-      Hi there, welcome to your homepage! 
-      You can edit everything on this page including the photos, page titles, icons (emojis), hyperlinks, etc. 
-      Read my tutorial if you need help with 🐧 Setting Up Your Notion Website (Desktop, iPad & Mobile). 
-      I’ve also added a bunch of tips on each webpage.
-    </p>
-    <p class="Contact-form">
-      📄 The Contact Form on this template is just a sample—you will have to create your own. 
-      A tutorial is included in 🐧 Setting Up Your Notion Website (Desktop, iPad & Mobile).
-    </p>
-    <p class="Delete">
-      🗑️ You can delete this box whenever you’re ready to publish your website.
-    </p>
-  </main>
+  <div class="info-box">
+    <p>💡 Hi there, welcome to your homepage! You can edit everything on this page including the photos, page titles, icons (emojis), hyperlinks, etc. Read my tutorial if you need help with 📎 Setting Up Your Notion Website (Desktop, iPad & Mobile). I’ve also added a bunch of tips on each webpage.</p>
+    
+    <p>📄 The Contact Form on this template is just a sample—you will have to create your own. A tutorial is included in 📎 Setting Up Your Notion Website (Desktop, iPad & Mobile).</p>
+    
+    <p>🗑️ You can delete this box whenever you’re ready to publish your website.</p>
+  </div>
 </body>
 </html>
